add new tests