@@ -20,9 +20,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>21</maven.compiler.target>
         <maven.compiler.source>2</maven.compiler.source>
-        <jacoco.excludes>**/JenkinsDemoApplication*.class</jacoco.excludes>
+        <jacoco.excludes>
+<!--            **/JenkinsDemoApplication*.class-->
+        </jacoco.excludes>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-        <sonar.coverage.exclusions>**/JenkinsDemoApplication.java</sonar.coverage.exclusions>
+        <sonar.coverage.exclusions>
+<!--            **/JenkinsDemoApplication.java-->
+        </sonar.coverage.exclusions>
     </properties>
 
     <dependencies>
@@ -39,6 +43,17 @@
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.2</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*IT.java</exclude>
+                        <exclude>**/*IntegrationTest.java</exclude>
+                    </excludes>
+                    <argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -62,31 +77,6 @@
                             <excludes>
                                 <exclude>${jacoco.excludes}</exclude>
                             </excludes>
-                        </configuration>
-                    </execution>
-
-                    <!-- Enforce minimum coverage -->
-                    <execution>
-                        <id>check</id>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
-                            <excludes>
-                                <exclude>${jacoco.excludes}</exclude>
-                            </excludes>
-                            <rules>
-                                <rule>
-                                    <element>BUNDLE</element>
-                                    <limits>
-                                        <limit>
-                                            <counter>LINE</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>0.80</minimum> <!-- 70% required -->
-                                        </limit>
-                                    </limits>
-                                </rule>
-                            </rules>
                         </configuration>
                     </execution>
                 </executions>
